[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
aho-corasick = "1.1.2"
anyhow = { version = "1.0.75", features = [] }
derivative = { version = "2.2.0", features = [] }
num = "0.4.1"
regex = "1"
itertools = "0.12"